# nexongo

./: 10.16문제발생  API  결론  전략
ChatApp/: Chatapp.sln
ChatApp/mysqlte/: ChatClient.cs  ChatClient.csproj
MySqlTest/: CMakeLists.txt  main.cpp
MyTcpServer/: CMakeLists.txt
MyTcpServer/src/: client.cpp  server.cpp
NeopleGo/: NeopleGo.sln
NeopleGo/ConsoleApplication1/: ConsoleApplication1.vcxproj
mysqlte/ChatServer/: ChatServer.cs  ChatServer.csproj
mysqlte/ChatServer.cs/: ChatServer.cs
참고자료/: SQL기본구문(C#).txt  example118.sql
참고자료/example118/: example118.sln
참고자료/example118/example118/: App.config  Form1.Designer.cs  Form1.cs  Program.cs  example118.csproj
참고자료/example118/example118/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
